[package]
name = "mqtt-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = {version = "0.5", features = ["profiling"]}

[dependencies]
httpmock = "0.6"
isahc = "1.7"
clap = { version = "4.0.0", features = ["derive"] }
tokio = {version = "1.9.0", features = ["full"]}
mqtt-protocol = { version="0.11", features = ["tokio"] }
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9.17"
futures = "0.3.19"
rand = "0.8.4"
base64 = "0.21.0"
metrics = { version = "0.20.1" }
metrics-exporter-prometheus = {version = "0.11.0"}
metrics-util = { version = "^0.14.0"}
sys-info = "0.9"
atomic-counter = "1.0.1"
text-template = "0.1.0"
reqwest = { version = "0.11", features = ["json"] }
jsonpath-rust = "0.2.1"
serde_json = "1.0.91"
